[package]
name = "hadss_storage_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1.36"
clap = { version = "3.1.6", features = ["derive", "env"] }
openraft = { git = "https://github.com/datafuselabs/openraft", rev = "21959ffce1a451b7888ffcfc9931402b58fe7d6f" }
env_logger = "0.9.0"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version="1.0.114", features=["derive"] }
serde_json = "1.0.57"
tokio = { version="1.17.0", default-features=false, features=["sync"] }
tracing = "0.1.29"
tracing-futures = "0.2.4"
sled = "0.34"
